--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,83 @@
+/* Created by Tivotal */
+
+/* Google Fonts(Poppins) */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f4f4f4;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #0b638c;
 }
 
-#checkButton {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 3px 6px 0px;
-    transition: transform 0.2s, box-shadow 0.2s;
+.openBtn {
+  padding: 10px 60px;
+  background: #fff;
+  outline: none;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 22px;
+  font-weight: 500;
 }
 
-#checkButton:hover {
-   transform: scale(1.1);
-   box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+.popup {
+  width: 400px;
+  background: #fff;
+  padding: 0 30px 30px;
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  text-align: center;
+  color: #333;
+  visibility: hidden;
+  transition: 0.5s;
 }
 
-#messageContainer {
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%) scale(1.5);
-   opacity: 0;
-   font-size: 24px;
-   padding: 20px;
-   background-color: #4caf50;
-   color: white;
-   border-radius: 5px;
-   box-shadow: 0 3px 6px rgba(0,0,0,0.1);
-   animation: fadeOut 2s forwards;
+.popup.active {
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
 
-@keyframes fadeOut {
-   0% { opacity: 1; transform: scale(1); }
-   50% { opacity: 1; }
-   100% { opacity: 0; transform: scale(1.5); }
+.popup i {
+  width: 100px;
+  height: 100px;
+  background: green;
+  border-radius: 50%;
+  font-size: 50px;
+  color: #fff;
+  line-height: 100px;
+  margin-top: -50px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
+}
+
+.popup h2 {
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top: 50px;
+  padding: 10px 0;
+  background: green;
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
 }
